# pdns-admin

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  dev.sh  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  dependencies.py  main.py  pdns_client.py
app/models/: audit.py  user.py  zone.py
app/repositories/: audit_repo.py  pdns_server_repo.py  settings_repo.py  user_repo.py  zone_assignment_repo.py  zone_template_repo.py
app/routers/: api_audit.py  api_auth.py  api_dnssec.py  api_metrics.py  api_pdns_servers.py  api_settings.py  api_tools.py  api_users.py  api_zone_templates.py  api_zones.py
app/templates/: audit.html  base.html  dashboard.html  login.html  profile.html  settings.html  tools.html
app/templates/dnssec/: keys.html
app/templates/metrics/: detail.html  overview.html
app/templates/users/: detail.html  list.html
app/templates/zones/: detail.html  export.html  list.html
app/views/: auth_views.py  dashboard_views.py  metrics_views.py  settings_views.py  tools_views.py  user_views.py  zone_views.py
migrations/: 001_initial.sql  003_zone_templates.sql  004_multi_pdns.sql  005_multiserver_zones.sql  006_zone_assignments_server.sql  007_user_default_ttl.sql
tests/: conftest.py  test_api_rrsets.py  test_api_zones.py  test_auth.py  test_models.py
