[project]
name = "poweradmin"
version = "1.0.0"
description = "Lightweight PowerDNS Authoritative server zone manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "httpx>=0.28,<1.0",
    "aiosqlite>=0.20,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.18,<1.0",
    "itsdangerous>=2.2,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "bcrypt>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
